# epigraph

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: ids.txt
docs/: conf.py  index.rst
docs/development/: environment.rst
epitopegraph/: __init__.py  api.py  cli.py  core.py  data.py  graph.py  models.py  viz.py
epitopegraph/benchmarks/: dataset.py
examples/: advanced.ipynb  basic_usage.ipynb  benchmark.ipynb  tutorial.ipynb
tests/: test_core.py
